samples/_failures_safe/1761500810_e13e62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09f21fdd.c: In function ‘main’:
./samples/SAFE/__tmp_09f21fdd.c:146:17: error: expected declaration or statement at end of input
  146 |                 entries[i] = entries[j];
      |                 ^~~~~~~
./samples/SAFE/__tmp_09f21fdd.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09f21fdd.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09f21fdd.c:146:17: error: expected declaration or statement at end of input
